--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "predeploy": "npm --prefix functions run build",
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build",
     "source": "functions"
   },
   "hosting": {
