--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,10 @@
 {
   "name": "functions",
   "scripts": {
-    "build": "./node_modules/.bin/tslint -p tslint.json && ./node_modules/.bin/tsc",
+    "lint": "tslint --project tsconfig.json",
+    "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
-    "shell": "npm run build && firebase experimental:functions:shell",
+    "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
