--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
     "@angular/platform-server": "5.2.10",
     "@angular/router": "5.2.10",
     "@angular/service-worker": "5.2.10",
-    "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
-    "firebase": "4.8.0",
     "rxjs": "^5.5.10",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.4",
+    "@angular/cli": "^6.2.9",
     "@angular/compiler-cli": "5.2.10",
     "@angular/language-service": "5.2.10",
     "@types/jasmine": "~2.5.53",
