--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/platform-server": "5.2.10",
-    "@angular/router": "5.2.10",
-    "@angular/service-worker": "5.2.10",
+    "@angular/animations": "6.1.10",
+    "@angular/common": "6.1.10",
+    "@angular/compiler": "6.1.10",
+    "@angular/core": "6.1.10",
+    "@angular/forms": "6.1.10",
+    "@angular/http": "6.1.10",
+    "@angular/platform-browser": "6.1.10",
+    "@angular/platform-browser-dynamic": "6.1.10",
+    "@angular/platform-server": "6.1.10",
+    "@angular/router": "6.1.10",
+    "@angular/service-worker": "6.1.10",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.10",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.6.3",
+    "zone.js": "^0.8.26",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "^6.2.9",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/language-service": "5.2.10",
+    "@angular/compiler-cli": "6.1.10",
+    "@angular/language-service": "6.1.10",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -48,6 +49,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "2.6.2"
+    "typescript": "2.9.2"
   }
 }
